# exchange-house

./: .coderabbit.yaml  .coverage  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  codecov.yml  compose.yml  docker.compose.yml  fly.toml  main.py  pyproject.toml  pytest.ini  renovate.json  status_check.py
.github/workflows/: backend-ci-lint.yml  backend-ci-test.yml  backend-publish.yml  backend-test.yml  ci-api-lint.yml  ci-api-test.yml  ci-frontend-coverage.yml  ci-frontend.yml  ci-lint.yml  ci-test.yml  ci.yml  firebase-lint.yml  frontend-ci-coverage.yml  frontend-ci.yml  mobile-ci-coverage.yml  mobile-ci-test.yml  mobile-ci.yml  publish.yml  test-coverage-backend.yml  test-coverage-frontend.yml  test-coverage-mobile.yml
app/: celery_app.py  main.py  pre_start.py  start.py
app/api/: available_dates.py  currency_pairs.py  historical_exchange_rates.py  latest_exchange_rate.py  main.py  routes.py  scheduler.py
app/core/: config.py  database.py  dependencies.py  firebase.py  jobs.py  logger.py  scheduler.py
app/data/: currencies.py  valid_currencies.py
app/decorators/: __init__.py  database_transactional.py  perform_as_background_task.py  perform_in_background.py
app/integrations/: healthchecks.py  open_exchange_rates.py
app/middleware/: logging.py
app/models/: __init__.py  available_date.py  currency.py  currency_metadata.py  currency_pair.py  exchange_rate.py  exchange_rate_service.py
app/repositories/: currencies_repository.py
app/schema/: currency_pair_response.py  date_list_response.py  exchange_rate_response.py  simple_rate_response.py
app/services/: email_service.py  exchange_rate_refresh.py  exchange_rate_service.py  firebase_service.py  healthcheck_service.py  healthchecks_service.py
app/tasks/: __init__.py  exchange_rate_refresh_task.py  heartbeat.py  heartbeat_task.py  jobs.py  notifications.py  task_result.py
backend/: .env.sample  .gitignore  README.md  pyproject.toml  renovate.json
backend/cli/: refresh.py
backend/scripts/: setup.sh  test.sh
backend/tests/: conftest.py
cli/: firebase.py
firebase/: .firebaserc  firebase.json
firebase/functions/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json
frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: app.tsx  color.ts  config.ts  currencies.ts  index.css  main.tsx  types.ts
migrations/models/: 0_20250414072141_init.py  (+1 more)
mobile/: .depcheckrc  .gitignore  README.md  app.json  biome.json  eas.json  icon-2.afphoto  icon.afphoto  icon.psd  jest.config.ts  jest.setup.js  package.json  pnpm-lock.yaml  tsconfig.json
mobile/.husky/: pre-commit
scripts/: dev.sh  docker-utils.sh  entrypoint.sh  lint.sh  manual_refresh.py  seed.sh  setup.sh  test.sh
tests/: conftest.py  test_temp.py
(+151 files in other folders)
