[project]
name = "exchange-house"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]==0.115.12"]


[tool.uv]
dev-dependencies = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "mypy==1.15.0",
    "ruff==0.11.5",
    "coverage<8.0.0,>=7.4.3",
    "pre-commit>=4.2.0",
]

[tool.mypy]
strict = true
exclude = [".venv", "alembic"]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "W191", # indentation contains tabs
]

[tool.coverage.report]
# omit = ["app/main.py"]
